--- a/CodeSprints/multicollinearity_methods.ipynb
+++ b/CodeSprints/multicollinearity_methods.ipynb
@@ -232,27 +232,98 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "#attach to Google Drive\n",
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "R1h5xUqD3pTu",
+        "outputId": "f5cfcbd1-8b78-4e2f-be38-3218a54d673f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "R1h5xUqD3pTu",
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ls"
+      ],
+      "metadata": {
+        "id": "TlP9trej4h0n",
+        "outputId": "6a28b6e0-8c26-46e0-e76a-370ebd7b1d77",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "TlP9trej4h0n",
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[0m\u001b[01;34mdrive\u001b[0m/  \u001b[01;34msample_data\u001b[0m/\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
       "id": "1318b96b",
       "metadata": {
-        "id": "1318b96b"
+        "id": "1318b96b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ff9d8912-f9b9-4308-b6e7-c800b69aac0f"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Archive:  election.zip\n",
+            "   creating: election/\n",
+            "  inflating: election/election.prj   \n",
+            "  inflating: election/election.shx   \n",
+            "  inflating: election/election.shp   \n",
+            "   creating: __MACOSX/\n",
+            "   creating: __MACOSX/election/\n",
+            "  inflating: __MACOSX/election/._election.shp  \n",
+            "  inflating: election/election.dbf   \n"
+          ]
+        }
+      ],
       "source": [
         "# Task 1 code here:\n",
         "#import required function:\n",
         "import urllib.request\n",
         "\n",
         "#define online filepath (aka url):\n",
-        "\n",
+        "url = 'https://geodacenter.github.io/data-and-lab//data/election.zip'\n",
         "\n",
         "#define local filepath:\n",
-        "\n",
+        "local = 'election.zip'\n",
         "\n",
         "#download elections data:\n",
+        "urllib.request.urlretrieve(url, local)\n",
         "\n",
-        "\n",
-        "#unzip file: see if google can help you figure this one out!\n"
+        "#unzip file: see if google can help you figure this one out!\n",
+        "!unzip election.zip"
       ]
     },
     {
