--- a/CodeSprints/multicollinearity_methods.ipynb
+++ b/CodeSprints/multicollinearity_methods.ipynb
@@ -91,14 +91,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "9de38c04",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "9de38c04",
-        "outputId": "95725bd3-5832-4b61-cbfb-c6f9d3a792b1"
+        "outputId": "f21b1a93-5cf1-4250-91ae-e07aa284dc45"
       },
       "outputs": [
         {
@@ -188,29 +188,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "id": "8c7fe6d5",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "8c7fe6d5",
-        "outputId": "c1730fc3-3015-470b-963a-19e6a65117e5"
+        "outputId": "5aba1302-6213-4022-ee25-6b533c840ab3"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "['/root/.local/share/pysal/Elections/election/election.shx',\n",
-              " '/root/.local/share/pysal/Elections/election/election.prj',\n",
+              "['/root/.local/share/pysal/Elections/__MACOSX/election/._election.shp',\n",
               " '/root/.local/share/pysal/Elections/election/election.dbf',\n",
               " '/root/.local/share/pysal/Elections/election/election.shp',\n",
-              " '/root/.local/share/pysal/Elections/__MACOSX/election/._election.shp']"
+              " '/root/.local/share/pysal/Elections/election/election.prj',\n",
+              " '/root/.local/share/pysal/Elections/election/election.shx']"
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 4
         }
       ],
       "source": [
@@ -239,13 +239,13 @@
       ],
       "metadata": {
         "id": "R1h5xUqD3pTu",
-        "outputId": "f5cfcbd1-8b78-4e2f-be38-3218a54d673f",
+        "outputId": "2d10265d-b7bb-497f-c48b-5420139c7fb3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "R1h5xUqD3pTu",
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -263,13 +263,13 @@
       ],
       "metadata": {
         "id": "TlP9trej4h0n",
-        "outputId": "6a28b6e0-8c26-46e0-e76a-370ebd7b1d77",
+        "outputId": "72450808-c3aa-4a12-e3d8-c448d6e9e175",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "id": "TlP9trej4h0n",
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -289,7 +289,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ff9d8912-f9b9-4308-b6e7-c800b69aac0f"
+        "outputId": "b39676dc-3dc4-47b1-d9c2-b5c97cfbb10e"
       },
       "outputs": [
         {
@@ -338,14 +338,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "id": "81455057",
       "metadata": {
-        "id": "81455057"
+        "id": "81455057",
+        "outputId": "08ee4089-feb5-468d-9e94-80c9d8f21900",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-10-cc2a15712a48>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# TASK 2: Use geopandas to read in this shapefile. Call your geopandas.DataFrame \"votes\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mvotes\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_file\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mElection\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mvotes\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'Election' is not defined"
+          ]
+        }
+      ],
       "source": [
-        "# TASK 2: Use geopandas to read in this shapefile. Call your geopandas.DataFrame \"votes\"\n"
+        "# TASK 2: Use geopandas to read in this shapefile. Call your geopandas.DataFrame \"votes\"\n",
+        "votes = gpd.read_file(Election)\n",
+        "votes.head()"
       ]
     },
     {
@@ -562,7 +581,7 @@
         "## Multivariate regression in observational data:\n",
         "Our next step is to formulate our predictive/diagnostic model. We want to create a subset of the \"votes\" geopandas data frame that contains ten predictor variables and our response variable (pct_pt_16) two variables you selected under TASK 1. First, create a list of the variables you'd like to select.\n",
         "\n",
-        "### TASK 6: Create a subset of votes called \"my_list\" containing only your selected predictor variables. Make sure you use the two variables selected under TASK 3, and eight additional variables"
+        "### TASK 6: Create a subset of votes called \"my_list\" containing only your selected predictor variables. Make sure you use the two variables selected under TASK 5, and eight additional variables"
       ]
     },
     {
@@ -574,7 +593,7 @@
       },
       "outputs": [],
       "source": [
-        "# Task 4: create a subset of votes called \"my list\" with all your subset variables.\n",
+        "# Task 6: create a subset of votes called \"my list\" with all your subset variables.\n",
         "#my_list = [\"pct_pt_16\", <list your variables here>]      "
       ]
     },
